--- a/tags.html
+++ b/tags.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Ayush's Website</title>
+		<link rel="icon" type="x-icon" href="favicon.ico">
 	</head>
 	<body>
 		<h1>Ayush</h1>
@@ -38,5 +39,36 @@
 				</a>
 			</li>
 		</ul>
+	
+    <strong>This text is important!</strong>
+	
+  	<table>
+  		<tr>
+    		<th>Company</th>
+    		<th>Contact</th>
+    		<th>Country</th>
+  		</tr>
+  		<tr>
+    		<td>Alfreds Futterkiste</td>
+    		<td>Maria Anders</td>
+    		<td>Germany</td>
+  		</tr>
+  		<tr>
+    		<td>Centro comercial Moctezuma</td>
+    		<td>Francisco Chang</td>
+   			<td>Mexico</td>
+  		</tr>
+	</table>
+	
+	<div style="border: 1px solid black">Hello World</div>
+	
+	<blockquote cite="http://www.worldwildlife.org/who/index.html">
+		For 50 years, WWF has been protecting the future of nature.
+		The world's leading conservation organization,
+		WWF works in 100 countries and is supported by
+		1.2 million members in the United States and
+		close to 5 million globally.
+	</blockquote>
+	
 	</body>
 </html>
